// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmazonConnectContentStack > Matches the snapshot > Create hierarchy 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AmazonConnectHierarchyGroupStackNestedStackAmazonConnectHierarchyGroupStackNestedStackResource3C4DFE15": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.us-east-1.",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/cdk-hnb659fds-assets-000000000000-us-east-1/f4c7192531e2169c783120481af23169ff2567236f1d9551c00ccb6f2ba5bce0.json",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "DepartmentUserHierarchyStructure": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "UserHierarchyStructure": {
          "LevelOne": {
            "HierarchyLevelId": "division",
            "Name": "Division",
          },
          "LevelThree": {
            "HierarchyLevelId": "team",
            "Name": "Team",
          },
          "LevelTwo": {
            "HierarchyLevelId": "department",
            "Name": "Department",
          },
        },
      },
      "Type": "AWS::Connect::UserHierarchyStructure",
    },
    "HoursOfOperation": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Standard business hours for operations",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Business Hours",
        "TimeZone": "UTC",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AmazonConnectContentStack > Matches the snapshot > Create hierarchy 2`] = `
{
  "Resources": {
    "Root0SalesDivision": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Sales Division",
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision0DomesticDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Domestic Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision0DomesticDepartment0TeamA": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team A",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision0DomesticDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision0DomesticDepartment1TeamB": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team B",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision0DomesticDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "International Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment0TeamC": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team C",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision1InternationalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment1TeamD": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team D",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision1InternationalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment2TeamE": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team E",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision1InternationalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Support Division",
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision0TechnicalDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Technical Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision0TechnicalDepartment0TeamF": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team F",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision0TechnicalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision1CustomerDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Customer Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision1CustomerDepartment0TeamG": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team G",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision1CustomerDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision1CustomerDepartment1TeamH": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team H",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision1CustomerDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
  },
}
`;

exports[`AmazonConnectContentStack > Matches the snapshot > Not create hierarchy 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "HoursOfOperation": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Standard business hours for operations",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Business Hours",
        "TimeZone": "UTC",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
